Implement web3js example serverside

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,10 @@
           <button onclick="uploadVideo()">upload Video</button>
         </div>
         <div>
-          <button onclick="getVideoAttributes()">get Video Attributes</button>
+          <button onclick="getVideoAttributesClientside()">get Video Attributes Clientside</button>
+        </div>
+        <div>
+          <button onclick="getVideoAttributesServerside()">get Video Attributes Serverside</button>
         </div>
         <div>
           <button onclick="releaseVideo()">Release Video</button>
