--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,18 +1,39 @@
-if messages.errors
-  .alert.alert-danger.fade.in
-    button.close(type='button', data-dismiss='alert')
-      i.fas.fa-times-circle-o
-    for error in messages.errors
-      div= error.msg
-if messages.info
-  .alert.alert-info.fade.in
-    button.close(type='button', data-dismiss='alert')
-      i.fas.fa-times-circle-o
-    for info in messages.info
-      div= info.msg
-if messages.success
-  .alert.alert-success.fade.in
-    button.close(type='button', data-dismiss='alert')
-      i.fas.fa-times-circle-o
-    for success in messages.success
-      div= success.msg
+<p> Express-Flash Demo </p>
+
+
+<% if ( messages.error ) { %>
+	<div class="alert alert-danger fade in">
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			<i class="fas fa-times-circle-o"></i>
+		</button>
+		<div>
+			<%= messages.error %>
+		</div>
+
+	</div>
+	<% } %>
+
+		<% if ( messages.info ) { %>
+			<div class="alert alert-info fade in">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<i class="fas fa-times-circle-o"></i>
+				</button>
+				<div>
+					<%= messages.info %>
+				</div>
+
+			</div>
+			<% } %>
+
+
+				<% if ( messages.success ) { %>
+					<div class="alert alert-success fade in">
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<i class="fas fa-times-circle-o"></i>
+						</button>
+						<div>
+							<%= messages.success %>
+						</div>
+
+					</div>
+					<% } %>
