--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,51 +8,51 @@
 <body>
   <%- include('partials/header'); -%>
     <div class="container">
-
-      <h1>Example</h1>
-      <!--Save address variable to js variable-->
-      <script>var local_address = '<%= address %>'; </script> Contract Address:
-      <br>
-      <br>
-      <%= address %>
-        <br> Blocknumber:
-        <div id="blocknumber"></div>
+      <%- include('partials/flash'); -%>
+        <h1>Example</h1>
+        <!--Save address variable to js variable-->
+        <script>var local_address = '<%= address %>'; </script> Contract Address:
         <br>
         <br>
-        <div id="videoinfo"></div>
-        <br>
-        <br>
-        <div>
-          idvideo:
-          <input type="text" id="idvideo">
-        </div>
+        <%= address %>
+          <br> Blocknumber:
+          <div id="blocknumber"></div>
+          <br>
+          <br>
+          <div id="videoinfo"></div>
+          <br>
+          <br>
+          <div>
+            idvideo:
+            <input type="text" id="idvideo">
+          </div>
 
-        <div>
-          secret Key:
-          <input type="text" id="secretkey">
-        </div>
-        <div>
-          releaseDate:
-          <input type="text" id="releasedate">
-        </div>
+          <div>
+            secret Key:
+            <input type="text" id="secretkey">
+          </div>
+          <div>
+            releaseDate:
+            <input type="text" id="releasedate">
+          </div>
 
-        <div>
-          Amount ether:
-          <input type="text" id="amounteth" value="1000000000000000000">
-        </div>
+          <div>
+            Amount ether:
+            <input type="text" id="amounteth" value="1000000000000000000">
+          </div>
 
-        <div>
-          <button onclick="uploadVideo()">upload Video</button>
-        </div>
-        <div>
-          <button onclick="getVideoAttributesClientside()">get Video Attributes Clientside</button>
-        </div>
-        <div>
-          <button onclick="getVideoAttributesServerside()">get Video Attributes Serverside</button>
-        </div>
-        <div>
-          <button onclick="releaseVideo()">Release Video</button>
-        </div>
+          <div>
+            <button onclick="uploadVideo()">upload Video</button>
+          </div>
+          <div>
+            <button onclick="getVideoAttributesClientside()">get Video Attributes Clientside</button>
+          </div>
+          <div>
+            <button onclick="getVideoAttributesServerside()">get Video Attributes Serverside</button>
+          </div>
+          <div>
+            <button onclick="releaseVideo()">Release Video</button>
+          </div>
 
 
 
