Signed Transaction Example

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,6 +60,7 @@
 
         <button class="btn btn-primary" onclick="uploadVideoClientside()">upload Video Clientside</button>
         <button class="btn" onclick="uploadVideoServerside()">upload Video Serverside</button>
+        <button class="btn" onclick="incrementVideosServerside()">increment Counter Serverside</button>
          
           
     </div>
