--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,9 +58,8 @@
           <div class="status">0%</div>
         </div>
 
-        <button class="btn btn-primary" onclick="uploadVideoClientside()">upload Video Clientside</button>
-        <button class="btn" onclick="uploadVideoServerside()">upload Video Serverside</button>
-        <button class="btn" onclick="incrementVideosServerside()">increment Counter Serverside</button>
+        <button class="btn btn-primary" onclick="uploadVideoClientside()">upload private account (Clientside)</button>
+        <button class="btn" onclick="uploadVideoServerside()">upload internal account (Serverside)</button>
          
           
     </div>
